# felling

./: .gitattributes  .gitignore  .lgtm.yml  .readthedocs.yaml  .readthedocs.yml  MANIFEST.in  README.md  codecove.yml  design_philosophy.md  pyproject.toml  release_notes.md  releasing.md  requirements.yaml  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  drafter.yml  python-package.yml  python-publish.yml  release-drafter.yml
docs/: example_conf.py  requirements.txt
docs/source/: How logging can up your python game.md  conf.py  felling.rst  felling.src.rst  index.rst
easy_logger/: README.md  __init__.py  easy_logger.py  logger.json
felling/: README.md  __init__.py  __main__.py  _version.py  compare_logs.py  felling.py  logger.json
felling/resources/: logger.json
felling/src/: compare_logs.py  configure_felling.py  email.py
src/felling/: __init__.py  __main__.py
tests/: create_sample_logs.py  test_compare_logs.py  test_configure_felling.py  test_email.py  test_felling.py
