[project]
name = "felling"
version = "0.1.6"
description = "A simple package to easily create consistent logs"
authors = [{ name = "Josh Kirk", email = "felling@joshkirk.co.uk" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["logging", "logs", "log"]
url="https://felling.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
Source = "https://github.com/this-josh/felling"
Tracker = "https://github.com/this-josh/felling/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
include = ["**/*.json"]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.5",
    "flake8>=7.1.1",
    "coverage>=7.6.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/felling"]
